--- a/css/main.css
+++ b/css/main.css
@@ -12,11 +12,15 @@ html {
     line-height: 1.5;
 }
 
+
+
 .container {
     max-width: 968px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 0.5em;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
 }
 
 
@@ -29,8 +33,7 @@ html {
     max-width: 30%;
     float: left;
     margin-top: 4em;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 20px;
     text-align: left;
     color: white;
     font-family: sans-serif;
@@ -57,4 +60,29 @@ html {
     vertical-align: middle;
     max-height: 100%;
     max-width: 100%;
+}
+
+@media (max-width: 565px) {
+        
+    .description {
+        min-width: 320px;
+        max-width: 100%;
+        margin-top: 4em;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+        color: red;
+        font-family: sans-serif;
+        font-size: 1.5em;
+    }
+    
+    .phone-container {
+        min-width: 100%;
+        
+    }
+    
+    .phonehelper {
+        max-height: 100%;
+        max-width: 100%;
+    }
 }
