--- a/css/main.css
+++ b/css/main.css
@@ -16,24 +16,52 @@ html {
 
 .container {
     max-width: 968px;
+    min-width: 320px;
+    vertical-align: middle;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 0.5em;
-    padding-left: 0.5em;
-    padding-right: 0.5em;
+    margin-top: 1em;
+    padding-left: 5px;
+    padding-right: 5px;
+    border: 1px;
+    border-style: dashed;
+    color: red;
+    overflow:hidden;
 }
 
+.logo-container {
+    width: 100%;
+    height: 100%;
+    margin-bottom: 20px;
+}
+
+.title {
+    text-align: left;
+    font-size: 2.25em;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+    color: white;
+    text-shadow: 5px 5px 40px black;
+    
+}
+
+.fizlrtitle {
+    base
+}
 
 .logo {
-    max-width: 35%;
+    max-width: 100px;
+    height: auto;
     
 }
 
 .description {
-    max-width: 30%;
+    min-width: 35%;
+    max-width: 40%;
     float: left;
     margin-top: 4em;
-    padding-left: 20px;
+    margin-left: 1em;
+    margin-right: 0.5em;
     text-align: left;
     color: white;
     font-family: sans-serif;
@@ -43,12 +71,11 @@ html {
 
 .phone-container {
     float: right;
-    max-width: 65%;
+    max-width: 50%;
     vertical-align: middle;
-    margin-top: 1.5em;
     margin-bottom: auto;
-    padding-left: 15px;
-    padding-right: 15px;
+    margin-top: 1em;
+    padding-right: 10px;
     text-align: center;
     color: white;
     font-family: sans-serif;
@@ -67,9 +94,8 @@ html {
     .description {
         min-width: 320px;
         max-width: 100%;
-        margin-top: 4em;
-        margin-left: auto;
-        margin-right: auto;
+        margin-top: 0.5em;
+        margin-bottom: 20px;
         text-align: center;
         color: red;
         font-family: sans-serif;
@@ -77,12 +103,19 @@ html {
     }
     
     .phone-container {
+        float: none;
         min-width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        overflow:hidden;
+        margin-bottom: 30px;
         
     }
     
     .phonehelper {
-        max-height: 100%;
+        max-height: 550px;
         max-width: 100%;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
