--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,7 @@ html {
 
 .container {
     max-width: 968px;
+    height: 100%;
     vertical-align: middle;
     margin-left: auto;
     margin-right: auto;
@@ -25,7 +26,19 @@ html {
     border: 1px;
     border-style: dashed;
     color: red;
+    text-align: center;
+    white-space: nowrap;
     overflow:hidden;
+
+}
+
+.container:before {
+    content: "";
+    display: inline-block;
+    vertical-align: middle;
+    width: 0;
+    margin-right: -.25em;
+    height: 100%;
 }
 
 .logo-container {
