--- a/css/main.css
+++ b/css/main.css
@@ -78,6 +78,7 @@ html {
     color: white;
     font-family: sans-serif;
     font-size: 1.5em;
+    overflow: hidden; 
 
 }
 
@@ -92,6 +93,7 @@ html {
     color: white;
     font-family: sans-serif;
     font-size: 1.5em;
+    overflow: hidden;
 
 }
 
