--- a/css/main.css
+++ b/css/main.css
@@ -57,10 +57,6 @@ html {
     margin-top: 4em;
     margin-left: 1em;
     margin-right: 0.5em;
-    text-align: left;
-    color: white;
-    font-family: sans-serif;
-    font-size: 1.5em;
 
 }
 
@@ -83,6 +79,20 @@ html {
     max-height: 100%;
     max-width: 100%;
 }
+
+/*Text styling goes here*/ 
+
+.strap {
+    text-align: left;
+    color: white;
+    font-family: 'Lato', sans-serif;
+    font-weight: 700;
+    font-size: 1.5em; 
+}
+
+
+
+/*Media Queries go here */
 
 @media (max-width: 565px) {
         
@@ -113,3 +123,5 @@ html {
         margin-right: auto;
     }
 }
+
+
