--- a/css/main.css
+++ b/css/main.css
@@ -100,10 +100,6 @@ html {
         max-width: 100%;
         margin-top: 0.5em;
         margin-bottom: 20px;
-        text-align: center;
-        color: red;
-        font-family: sans-serif;
-        font-size: 1.5em;
     }
     
     .phone-container {
@@ -121,6 +117,16 @@ html {
         max-width: 100%;
         margin-left: auto;
         margin-right: auto;
+    }
+    
+    /* text styling media queries */
+    
+    .strap {
+    text-align: center;
+    color: red;
+    font-family: 'Lato', sans-serif;
+    font-weight: 700;
+    font-size: 1em; 
     }
 }
 
