--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,7 @@ html {
     width: 100%;
     height: 100%;
     margin-bottom: 20px;
+    text-align: center;
 }
 
 .title {
@@ -68,9 +69,6 @@ html {
     margin-top: 1em;
     padding-right: 10px;
     text-align: center;
-    color: white;
-    font-family: sans-serif;
-    font-size: 1.5em;
 
 }
 
@@ -126,7 +124,7 @@ html {
     color: red;
     font-family: 'Lato', sans-serif;
     font-weight: 700;
-    font-size: 1em; 
+    font-size: 1.5em; 
     }
 }
 
