--- a/css/main.css
+++ b/css/main.css
@@ -87,7 +87,8 @@ html {
     color: white;
     font-family: 'Lato', sans-serif;
     font-weight: 700;
-    font-size: 1.5em; 
+    font-size: 1.5em;
+    text-shadow: 
 }
 
 
