--- a/css/main.css
+++ b/css/main.css
@@ -29,9 +29,9 @@ html {
 }
 
 .logo-container {
+    min-width: 35%;
+    max-width: 40%;
     float: left;
-    width: 100%;
-    height: 100%;
     margin-bottom: 20px;
     text-align: center;
     margin-left: auto;
