--- a/css/main.css
+++ b/css/main.css
@@ -29,14 +29,12 @@ html {
 }
 
 .logo-container {
-    min-width: 35%;
-    max-width: 40%;
-    float: left;
-    margin-bottom: 5px;
+    width: 100%;
+    height: 100%;
+    margin-bottom: 20px;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
-    overflow: hidden;
 }
 
 .title {
@@ -90,7 +88,6 @@ html {
     font-family: 'Lato', sans-serif;
     font-weight: 700;
     font-size: 1.5em;
-    text-shadow: 
 }
 
 
@@ -118,13 +115,6 @@ html {
     .phonehelper {
         max-height: 550px;
         max-width: 100%;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    
-    .logo-container {
-        max-width: 100%;
-        margin-top: 0.5em;
         margin-left: auto;
         margin-right: auto;
     }
