--- a/css/main.css
+++ b/css/main.css
@@ -88,6 +88,7 @@ html {
     font-family: 'Lato', sans-serif;
     font-weight: 700;
     font-size: 1.5em;
+    text-shadow: 0 1px #46494d;
 }
 
 
@@ -118,6 +119,7 @@ html {
         margin-left: auto;
         margin-right: auto;
     }
+    
     
     /* text styling media queries */
     
