--- a/css/main-flow.css
+++ b/css/main-flow.css
@@ -8,15 +8,18 @@ body {
 
 .header-bg {
     min-height: 450px;
-    background: url(/img/header-bg2.jpg) no-repeat center center fixed;
+    background: url(/img/header-bg3.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    padding-top: 50px;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    display: block;
+    padding-top: 15px;
     padding-left: 10px;
     padding-right: 10px;
-    padding-bottom: 50px;
+    padding-bottom: 15px;
     overflow: hidden; 
 }
 
@@ -32,8 +35,7 @@ body {
 }
 
 .header-left {
-    float: left;
-    max-width: 46%;
+    max-width: 100%;
     border: 1px;
     border-style: dashed;
     color: aqua;
@@ -41,14 +43,6 @@ body {
 }
 
 .header-right {
-    float: right;
-    max-width: 50%;
-    border: 1px;
-    border-style: dashed;
-    color: yellow;
-    overflow: hidden;
-}
-.header-alt {
     display: none;
     max-width: 85%;
     margin-left: auto;
@@ -58,24 +52,36 @@ body {
     color: yellow;
     overflow: hidden;
 }
+.header-alt {
+    max-width: 85%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 10px;
+    border: 1px;
+    border-style: dashed;
+    color: yellow;
+    overflow: hidden;
+}
 
 .header-text {
     font-family: 'Lato', sans-serif;
     font-weight: 300;
-    font-size: 28px;
+    font-size: 25px;
     letter-spacing: -0.5px;
     text-align: center;
     color: white;
     text-shadow: 1px 1px 2px #333333;
     padding-right: 5px;
-    padding-top: 25px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin: 0;
 }
 
 .logo-head {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    max-width: 85%;
+    max-width: 60%;
     height: auto;
 }
 
@@ -86,9 +92,17 @@ body {
     height: auto;
     
 }
+.phone-alt {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100%;
+    height: auto;
+    
+}
 
 .app-store-button {
     display: block;
+    display: none;
     margin-left: auto;
     margin-right: auto;
     max-width: 100%;
@@ -131,10 +145,10 @@ body {
 
 .large-title {
     margin: 0;
-    text-align: left;
+    text-align: center;
     font-family: 'Lato', sans-serif;
     font-weight: 700;
-    font-size: 30px;
+    font-size: 28px;
     letter-spacing: -1px;
     color: #D62716;
     word-spacing: 5px;
