--- a/css/main-flow.css
+++ b/css/main-flow.css
@@ -13,9 +13,6 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    background-position: 50% 50%;
-    background-repeat: no-repeat;
-    display: block;
     background-attachment: scroll;
     padding-top: 15px;
     padding-left: 10px;
@@ -171,20 +168,6 @@ body {
     height: 100%; 
 }
 
-.banner-1-bg {
-    min-height: 300px;
-    background: url(/img/bg1.jpg) no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    padding-top: 50px;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-bottom: 50px;
-    overflow: hidden;
-}
-
 .banner-container {
     margin-left: auto;
     margin-right: auto;
@@ -212,6 +195,7 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    background-attachment: scroll;
     padding-left: 10px;
     padding-right: 10px;
 }
@@ -222,6 +206,7 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    background-attachment: scroll;
     padding-left: 10px;
     padding-right: 10px;
 }
@@ -232,6 +217,7 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    background-attachment: scroll;
     padding-left: 10px;
     padding-right: 10px;
 
