--- a/css/main-flow.css
+++ b/css/main-flow.css
@@ -24,11 +24,11 @@ body {
 .header-container {
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 0;
     max-width: 910px;
     border: 1px;
     border-style: dashed;
     color: red;
-    overflow: hidden;
    
 }
 
@@ -42,13 +42,6 @@ body {
 
 .header-right {
     display: none;
-    max-width: 85%;
-    margin-left: auto;
-    margin-right: auto;
-    border: 1px;
-    border-style: dashed;
-    color: yellow;
-    overflow: hidden;
 }
 .header-alt {
     max-width: 85%;
@@ -58,7 +51,6 @@ body {
     border: 1px;
     border-style: dashed;
     color: yellow;
-    overflow: hidden;
 }
 
 .header-text {
@@ -79,33 +71,19 @@ body {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    max-width: 60%;
+    max-width: 50%;
     height: auto;
-}
-
-.phone-head {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 100%;
-    height: auto;
-    
 }
 .phone-alt {
+    max-width: 100%;
+    display: block;
     margin-left: auto;
     margin-right: auto;
-    max-width: 100%;
-    height: auto;
-    
+    height: auto;    
 }
 
 .app-store-button {
-    display: block;
     display: none;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 100%;
-    height: auto;
-    padding-top: 25px;
 }
 
 .container-shadow {
@@ -131,8 +109,8 @@ body {
     max-width: 910px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin-top: 15px;
+    margin-bottom: 15px;
     padding-left: 10px;
     padding-right: 10px;
     border: 1px;
@@ -167,27 +145,7 @@ body {
     width: 100%; 
     height: 100%; 
 }
-
-.banner-container {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 910px;
-    border: 1px;
-    border-style: dashed;
-    color: red;
-    overflow: hidden;
-}
-
-.list {
-    float: left;
-    min-width: 50%;
-    border: 1px;
-    border-style: dashed;
-    color: yellow;
-    text-align: left;
-    overflow: hidden;
-}
-
+    
 .feature-scroll-1 {
     min-height: 900px;
     background: url(/img/banner-4.jpg) no-repeat 48% 50% fixed;
@@ -235,9 +193,9 @@ body {
 .feature-scroll-content {
     margin-left: 0;
     margin-right: auto;
-    padding-left: 10px;
-    max-width: 40%;
-    min-width: 210px;
+    padding-left: 15px;
+    padding-right: 15px;
+    max-width: 100%;
     border: 1px;
     border-style: dashed;
     color: aqua;
@@ -245,23 +203,24 @@ body {
 }
 
 .feature-title {
-    padding-top: 150px;
+    padding-top: 0px;
     padding-bottom: 0px;
     margin-bottom: 0;
     font-family: 'Lato' , sans-serif;
     font-weight: 700;
-    font-size: 50px;
+    font-size: 40px;
     color: white;
+    text-align: center;
     line-height: normal;
     text-shadow: 1px 1px 2px #333333;
 }
 .feature-description {
-    padding-top: -10px;
-    padding-bottom: 20px;
+    padding-bottom: 0px;
     font-family: 'Lato' , sans-serif;
     font-weight: 300;
     font-size: 25px;
     color: white;
+    text-align: center;
     text-shadow: 1px 1px 2px #333333;
 }
 
