--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,7 @@ body {
 .header-left {
     float: left;
     max-width: 46%;
+    min-width: 380px;
     border: 1px;
     border-style: dashed;
     color: aqua;
@@ -62,13 +63,14 @@ body {
 .header-text {
     font-family: 'Lato', sans-serif;
     font-weight: 300;
-    font-size: 28px;
+    font-size: 30px;
     letter-spacing: -0.5px;
     text-align: center;
     color: white;
     text-shadow: 1px 1px 2px #333333;
-    padding-right: 5px;
-    padding-top: 25px;
+    padding-right: 10px;
+    padding-left: 10px;
+    padding-top: 0px;
 }
 
 .logo-head {
@@ -96,31 +98,12 @@ body {
     padding-top: 25px;
 }
 
-.container-shadow {
-    height: 25px;
-    width: 100%;
-    background-image:url(/img/ctn-shd.png);
-    background-repeat: repeat-x;
-    
-}
-
-.container-shadow-flip {
-    height: 25px;
-    width: 100%;
-    -ms-transform: rotate(180deg); /* IE 9 */
-    -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
-    transform: rotate(180deg);
-    background-image:url(/img/ctn-shd.png);
-    background-repeat: repeat-x;
-    
-}
-
-.video-container {
+.about-container {
     max-width: 910px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin-top: 25px;
+    margin-bottom: 25px;
     padding-left: 10px;
     padding-right: 10px;
     border: 1px;
@@ -129,15 +112,81 @@ body {
     overflow: hidden;
 }
 
-.large-title {
+.video-container {
+    max-width: 910px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border: 1px;
+    border-style: dashed;
+    color: red;
+    overflow: hidden;
+}
+
+.title {
     margin: 0;
-    text-align: left;
-    font-family: 'Lato', sans-serif;
+    padding-bottom: 0px;
+    font-family: 'Lato' , sans-serif;
     font-weight: 700;
-    font-size: 30px;
-    letter-spacing: -1px;
+    font-size: 45px;
+    text-align: center;
     color: #D62716;
     word-spacing: 5px;
+    line-height: 1.3;
+}
+
+.subtitle {
+    margin: 0;
+    padding-top: 15px;
+    padding-bottom: 20px;
+    font-family: 'Lato' , sans-serif;
+    font-weight: 300;
+    text-align: center;
+    font-size: 24px;
+    color: #D62716;
+}
+
+.description {
+    margin: 0;
+    padding-top: 0px;
+    padding-bottom: 20px;
+    font-family: 'Lato' , sans-serif;
+    font-weight: 400;
+    text-align: center;
+    font-size: 20px;
+    color: #697D7F;
+}
+
+.large-title {
+    margin: 0;
+    text-align: center;
+    font-family: 'Lato' , sans-serif;
+    font-weight: 700;
+    font-size: 40px;
+    color: #D62716;
+    line-height: normal;
+    word-spacing: 5px;
+}
+
+.about-left {
+    float: left;
+    max-width: 50%;
+    border: 1px;
+    border-style: dashed;
+    color: aqua;
+    overflow: hidden;
+}
+
+.about-right {
+float: right;
+    max-width: 45%;
+    border: 1px;
+    border-style: dashed;
+    color: yellow;
+    overflow: hidden;
 }
 
 .embed-container { 
