--- a/css/main.css
+++ b/css/main.css
@@ -7,16 +7,16 @@ body {
 }
 
 .header-bg {
-    min-height: 450px;
-    background: url(/img/header-bg2.jpg) no-repeat center center fixed;
+    min-height: 650px;
+    background: url(/img/header-bg8.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    padding-top: 50px;
+    padding-top: 80px;
     padding-left: 10px;
     padding-right: 10px;
-    padding-bottom: 50px;
+    padding-bottom: 0px;
     overflow: hidden; 
 }
 
@@ -102,8 +102,8 @@ body {
     max-width: 910px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 25px;
-    margin-bottom: 25px;
+    margin-top: 50px;
+    margin-bottom: 50px;
     padding-left: 10px;
     padding-right: 10px;
     border: 1px;
@@ -131,7 +131,7 @@ body {
     padding-bottom: 0px;
     font-family: 'Lato' , sans-serif;
     font-weight: 700;
-    font-size: 45px;
+    font-size: 42px;
     text-align: center;
     color: #D62716;
     word-spacing: 5px;
@@ -145,7 +145,7 @@ body {
     font-family: 'Lato' , sans-serif;
     font-weight: 300;
     text-align: center;
-    font-size: 24px;
+    font-size: 23px;
     color: #D62716;
 }
 
@@ -158,6 +158,7 @@ body {
     text-align: center;
     font-size: 20px;
     color: #697D7F;
+    line-height: 1.6
 }
 
 .large-title {
