--- a/css/main.css
+++ b/css/main.css
@@ -24,10 +24,11 @@ body {
     margin-left: auto;
     margin-right: auto;
     max-width: 910px;
-    border: 1px;
+    border: 0px;
     border-style: dashed;
     color: red;
     overflow: hidden;
+    padding-bottom: 0;
    
 }
 
@@ -44,7 +45,7 @@ body {
 .header-right {
     float: right;
     max-width: 50%;
-    border: 1px;
+    border: 0px;
     border-style: dashed;
     color: yellow;
     overflow: hidden;
@@ -86,6 +87,7 @@ body {
     margin-right: auto;
     max-width: 100%;
     height: auto;
+    vertical-align: bottom;
     
 }
 
