--- a/css/main.css
+++ b/css/main.css
@@ -4,10 +4,17 @@ body {
     
     /*Make the text have a nice line height*/
     line-height: 1.5;
+    
+    width: 100vw;
+    
+    margin: 0;
+    
+    overflow-x: hidden;
 }
 
 .header-bg {
     min-height: 650px;
+    width: 100vw;
     background: url(/img/header-bg8.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -231,6 +238,7 @@ float: right;
 
 .feature-scroll-1 {
     min-height: 900px;
+    width: 100vw;
     background: url(/img/banner-4.jpg) no-repeat 48% 50% fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -241,6 +249,7 @@ float: right;
 }
 .feature-scroll-2 {
     min-height: 900px;
+    width: 100vw;
     background: url(/img/banner-5.jpg) no-repeat 48% 50% fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -251,6 +260,7 @@ float: right;
 }
 .feature-scroll-3 {
     min-height: 900px;
+    width: 100vw;
     background: url(/img/banner-6.jpg) no-repeat 48% 50% fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
