--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    background-attachment: fixed;
+    background-attachment: scroll;
     padding-top: 80px;
     padding-left: 10px;
     padding-right: 10px;
