--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ overflow: scroll;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    background-attachment: scroll;
+    background-attachment: fixed;
     padding-top: 80px;
     padding-left: 10px;
     padding-right: 10px;
