--- a/css/main-flow.css
+++ b/css/main-flow.css
@@ -22,7 +22,8 @@ body {
 }
 
 .header-container {
-    height: 100%;
+    min-height: 450px;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 0;
