--- a/css/main-flow.css
+++ b/css/main-flow.css
@@ -22,7 +22,6 @@ body {
 }
 
 .header-container {
-    min-height: 450px;
     width: 100%;
     margin-left: auto;
     margin-right: auto;
@@ -81,7 +80,8 @@ body {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    height: auto;    
+    height: auto;
+    overflow: hidden;
 }
 
 .app-store-button {
