--- a/css/main-land.css
+++ b/css/main-land.css
@@ -47,6 +47,7 @@ body {
     display: none;
 }
 .header-alt {
+    display: inline;
     max-width: 85%;
     margin-left: auto;
     margin-right: auto;
