--- a/css/main-land.css
+++ b/css/main-land.css
@@ -47,7 +47,7 @@ body {
     display: none;
 }
 .header-alt {
-    display: inline;
+    display: block;
     max-width: 85%;
     margin-left: auto;
     margin-right: auto;
