--- a/css/main.css
+++ b/css/main.css
@@ -141,7 +141,7 @@ a:active {
     margin-bottom: 40px;
 /*    background-image: linear-gradient(#D62716, #AA1A16);*/
     background-color: #D62716;
-    border-top: 1px solid rgba(255,255,255,.3);
+    border-top: 1px solid rgba(255,255,255,.4);
     border-radius: 8px;
     -webkit-filter: drop-shadow( 0px 3px 2px rgba(0,0,0,.5) );
     filter: drop-shadow( 0px 3px 2px rgba(0,0,0,.5) );
@@ -307,7 +307,6 @@ a:active {
     border-style: dashed;
     color: yellow;
     overflow: hidden;
-    
 }
 
 .embed-container { 
@@ -420,6 +419,97 @@ a:active {
     text-shadow: 1px 1px 2px #333333;
 }
 
+.beta-bg {
+    min-height: 400px;
+    background: url(/img/bg_beta.jpg) no-repeat 48% 50% fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+.beta-container {
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 75px;
+    padding-left: 10px;
+    padding-right:  20px;
+    padding-bottom: 50px;
+    border: 0px;
+    border-style: dashed;
+    color: red;
+    overflow: hidden;
+}
+
+.beta-left {
+    
+}
+
+.beta-right {
+    display: block;
+    float: right;
+    max-width: 38%;
+    background-color: white;
+    padding: 15px;
+    margin-bottom: 25px;
+    border: 1px;
+    border-style: solid;
+    border-radius: 4px;
+    color: #dddddd;
+    -webkit-filter: drop-shadow( 0px 3px 2px rgba(0,0,0,.5) );
+    filter: drop-shadow( 0px 3px 2px rgba(0,0,0,.5) );
+}
+.beta-form {
+    display: block;
+    width: 90%;
+    padding-top: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+#txt {
+    width: 90%;
+    border-radius:5px; 
+    border: solid 1px #ccc; 
+    padding:8px;
+    margin-bottom: 20px;
+    background-color: #f5f5f5; 
+    box-shadow: inset 0 2px 3px rgba(0,0,0,0.2);
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
+    font-size: 18px;
+}
+
+#mail {
+    width: 90%;
+    border-radius:5px; 
+    border: solid 1px #ccc; 
+    padding:8px;
+    margin-bottom: 20px;
+    background-color: #f5f5f5; 
+    box-shadow: inset 0 2px 3px rgba(0,0,0,0.2);
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
+    font-size: 18px;
+}
+
+#sign {
+    width: 60%; 
+    padding:8px;
+    margin-bottom: 20px;
+    background-color: #D62716;
+    border-top: 1px solid rgba(255,255,255,.4);
+    border-radius: 8px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 400;
+    font-size: 23px;
+    color: white;
+    letter-spacing: 1px;
+    text-align: center;
+    -webkit-filter: drop-shadow( 0px 2px 2px rgba(0,0,0,.3) );
+    filter: drop-shadow( 0px 2px 2px rgba(0,0,0,.3) );
+}
 .review-container {
     max-width: 910px;
     margin-left: auto;
