--- a/css/main.css
+++ b/css/main.css
@@ -468,8 +468,23 @@ a:active {
     margin-right: auto;
     text-align: center;
 }
+
+:-moz-placeholder {
+    color: grey;
+}
+ 
+::-webkit-input-placeholder {
+    color: grey;
+}
+
+*:focus {
+    outline: none;
+}
+
 #txt {
-    width: 90%;
+    -webkit-transition: width .25s;
+    transition: width .25s;
+    width: 80%;
     border-radius:5px; 
     border: solid 1px #ccc; 
     padding:8px;
@@ -479,10 +494,38 @@ a:active {
     font-family: 'Lato', sans-serif;
     font-weight: 300;
     font-size: 18px;
+    opacity: .6;
 }
 
+#txt:focus {
+    box-shadow: inset 0 2px 6px rgba(34,170,255,0.3);
+    width: 90%;
+    opacity: 1;
+}
+
+*:required {
+    background: url(/img/required.svg) no-repeat 100% center;
+}
+
+#mail:focus:invalid {
+    background: url(/img/invalid.svg) no-repeat 100% center;
+}
+
+#mail:valid {
+    background: url(/img/valid.svg) no-repeat 100% center;
+}
+
+#txt:focus:invalid {
+    background: url(/img/invalid.svg) no-repeat 100% center;
+}
+
+#txt:required:valid {
+    background: url(/img/valid.svg) no-repeat 100% center;
+}
 #mail {
-    width: 90%;
+    -webkit-transition: width .25s;
+    transition: width .25s;
+    width: 80%;
     border-radius:5px; 
     border: solid 1px #ccc; 
     padding:8px;
@@ -492,14 +535,23 @@ a:active {
     font-family: 'Lato', sans-serif;
     font-weight: 300;
     font-size: 18px;
+    opacity: .6;
 }
 
-#sign {
+#mail:focus {
+    box-shadow: inset 0 2px 6px rgba(34,170,255,0.3);
+    width: 90%;
+    opacity: 1;
+}
+.sign {
+    -webkit-transition: background-color .3s;
+    transition: background-color .3s;
     width: 60%; 
     padding:8px;
     margin-bottom: 20px;
     background-color: #D62716;
-    border-top: 1px solid rgba(255,255,255,.4);
+    border: 0;
+    border-top: 1px solid rgba(255,255,255,.7);
     border-radius: 8px;
     font-family: 'Lato', sans-serif;
     font-weight: 400;
@@ -509,6 +561,14 @@ a:active {
     text-align: center;
     -webkit-filter: drop-shadow( 0px 2px 2px rgba(0,0,0,.3) );
     filter: drop-shadow( 0px 2px 2px rgba(0,0,0,.3) );
+}
+
+.sign:hover {
+    background-color: #C10606;
+}
+
+.sign:active {
+    background-color: #78B142;
 }
 .review-container {
     max-width: 910px;
