--- a/css/main.css
+++ b/css/main.css
@@ -131,8 +131,10 @@ a:active {
 }
 
 .betabutton {
-    -webkit-transition: all .3s;
-    transition: all .3s;
+    -webkit-transition: background-color .3s;
+    transition: background-color .3s;
+    -webkit-transition: max-width .25s;
+    transition: max-width .25s;
     max-width: 65%;
     height: 50px;
     margin-left: auto;
@@ -151,11 +153,12 @@ a:active {
 .betabutton:hover {
 /*    background-image: linear-gradient(#78B142, #AA1A16);*/
     background-color: #C10606;
+    max-width: 68%;
 }
 
 #beta-bt-txt {
-    -webkit-transition: all .3s;
-    transition: all .3s;
+    -webkit-transition: opacity .3s;
+    transition: opacity .3s;
     height: 40px;
     font-family: 'Lato', sans-serif;
     font-weight: 400;
@@ -494,12 +497,17 @@ a:active {
     font-family: 'Lato', sans-serif;
     font-weight: 300;
     font-size: 18px;
-    opacity: .6;
+    opacity: .5;
+}
+
+#txt:hover {
+    width:83%;
+    opacity: .7
 }
 
 #txt:focus {
     box-shadow: inset 0 2px 6px rgba(34,170,255,0.3);
-    width: 90%;
+    width: 93%;
     opacity: 1;
 }
 
@@ -538,14 +546,21 @@ a:active {
     opacity: .6;
 }
 
+#mail:hover {
+    width:83%;
+    opacity: .7
+}
+
 #mail:focus {
     box-shadow: inset 0 2px 6px rgba(34,170,255,0.3);
-    width: 90%;
+    width: 93%;
     opacity: 1;
 }
 .sign {
     -webkit-transition: background-color .3s;
     transition: background-color .3s;
+    -webkit-transition: width .3s;
+    transition: width .3s;
     width: 60%; 
     padding:8px;
     margin-bottom: 20px;
@@ -565,6 +580,7 @@ a:active {
 
 .sign:hover {
     background-color: #C10606;
+    width: 65%;
 }
 
 .sign:active {
